--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfólio Thiago Peixoto</title>
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700&display=swap" rel="stylesheet">
     <style>
         body {
@@ -219,13 +220,13 @@
         <div class="projects">
             <div class="project">
                 <img src="projeto1.png" alt="Projeto 1">
-                <a href="link-do-projeto-1">Project Full Stack</a>
-                <div class="project-description"><h1>Java & Spring & React</h1>This project is intended to give continuity to a project on daily task management and is still in production.</div>
+                <a href="https://github.com/Th1ago23/WebToDo">Project Microservice</a>
+                <div class="project-description"><h1>Java & Spring</h1>This project is intended to give continuity to a project on daily task management and is still in production.</div>
             </div>
             <div class="project">
-                <!--<img src="projeto2.jpg" alt="Projeto 2">-->
-                <a href="link-do-projeto-2">In progress...</a>
-                <div class="project-description"><h1>Java & Spring & React</h1>This project is a micro-service intended to improve user authentication and bring greater security to systems</div>
+                <img src="projeto2.png" alt="Projeto 2">
+                <a href="https://github.com/Th1ago23/UserLoginRegister">UserRegisterLogin</a>
+                <div class="project-description"><h1>Java & Spring & React</h1>This full stack project implements a user authentication system, developed in Java using Spring on the backend and React on the frontend. The application allows users to register and log in, using a secure and scalable architecture.</div>
             </div>
         </div>
     </section>
