--- a/index.html
+++ b/index.html
@@ -442,6 +442,18 @@ body {
                 <img src="azure.png" alt="icon by Icons8">
                 <h3>Azure</h3>
             </div>
+            <div class="skill-card">
+                <img src="javascript.png" alt="icon by Icons8">
+                <h3>JavaScript</h3>
+            </div>
+            <div class="skill-card">
+                <img src="react.png" alt="icon by Icons8">
+                <h3>React</h3>
+            </div>
+            <div class="skill-card">
+                <img src="angular.png" alt="icon by Icons8">
+                <h3>AngularJs</h3>
+            </div>
         </div>
     </section>
 
