--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <script src="languageToggle.js"></script>
 </head>
 
 <body>
@@ -16,7 +17,17 @@
         <a href="#about-me">About Me</a>
         <a href="#contact">Contact</a>
         <a href="#experience">Experiences</a>
+
+        <div class="toggle-container">
+            <span class="toggle-label">EN</span>
+            <label class="toggle-switch">
+                <input type="checkbox" onchange="toggleLanguage(this)">
+                <span class="slider"></span>
+            </label>
+            <span class="toggle-label">PT-BR</span>
+        </div>
     </div>
+    
 
     <header class="hero">
         <div class="hero-content">
