--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
             </div>
             <div class="skill-card">
                 <img src="react.png" alt="icon by Icons8">
-                <h3>React and React Native</h3>
+                <h3>React | React Native</h3>
             </div>
             <div class="skill-card">
                 <img src="nodejs.png" alt="icon by Icons8">
