--- a/index.html
+++ b/index.html
@@ -261,11 +261,9 @@
     
         <div class="experience">
             <h3>IT Trainee at CSN</h3>
-            <span>May 2024 - Present | Volta Redonda, Brazil</span>
+            <span>May 204 - Present | Volta Redonda, Brazil</span>
             <p>
-                I developed automations with VB to improve and expand the team's day-to-day production margin.
-                I was able to help increase the production of activities by 20% by automating spreadsheets and controls within the financial system.
-                I was part of a day-to-day agile methodology (Scrum) as well as daily meetings and cooperation in improving the team's reports.
+                I developed automations with SAP, optimizing the routine on Mondays, Wednesdays, and Fridays, which reduced analysis time by 2 hours for value verification. I created Excel automations using VBA to calculate monthly project balances, significantly reducing analysis errors within the team. My experience includes analyzing CAPEX and OPEX projects, automating daily report submissions for director approval with VBA, saving over 8 hours weekly. Additionally, I conducted artificial intelligence training for the team to introduce improvements and automations into their workflow. I designed project control spreadsheets to enhance oversight of daily projects and tasks and developed dashboards in Qlik Sense to migrate the CAPEX dashboard from Power BI. My data analysis on projects assessed status, available CAPEX, project duration, and event requirements. I participated in training events focused on methodologies and technologies to enhance employee analytical skills in cybersecurity, facilitated by Fortinet and Rockwell. I reviewed daily purchase requests and submitted reports for director approval, identified improvements within the financial system responsible for monitoring all projects at the plant, and updated project controls and timelines for submission to the project planner. My responsibilities also included making hardware adjustments and analyzing committed payment items for ongoing projects.
             </p>
         </div>
     </section>
